# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
authors = ["Rowan Hart <rowan.hart@intel.com>"]
# https://crates.io/category_slugs
categories = [
    "science",
    "mathematics",
    "hardware-support",
    "external-ffi-bindings",
]
description = "MKL bindings for rust"
documentation = "https://github.com/novafacing/mkl-rs"
edition = "2021"
homepage = "https://github.com/novafacing/mkl-rs"
keywords = [
    "science",
    "mathematics",
    "hardware-support",
    "external-ffi-bindings",
    "Intel",
    "Math Kernel Library",
    "mkl",
]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/mkl-rs"

[workspace]
resolver = "2"
members = ["mkl-rs-sys"]
default-members = ["mkl-rs-sys"]
exclude = []
