# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
authors = ["Rowan Hart <rowan.hart@intel.com>"]
# https://crates.io/category_slugs
categories = [
    "science",
    "mathematics",
    "hardware-support",
    "external-ffi-bindings",
]
description = "MKL bindings for Rust"
documentation = "https://github.com/novafacing/mkl-rs"
edition = "2021"
homepage = "https://github.com/novafacing/mkl-rs"
keywords = ["science", "mathematics", "ai", "hpc"]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/mkl-rs"

[workspace]
resolver = "2"
members = ["mkl-rs-build", "mkl-rs-sys"]
default-members = ["mkl-rs-sys", "mkl-rs-build"]
exclude = []

[workspace.dependencies]
mkl-rs-build = { path = "mkl-rs-build" }
