[package]
name = "mkl-rs-build"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description = "Build utilities for MKL"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.80"
pkg-config = "0.3.30"
bindgen = "0.69.2"
