[package]
name = "mkl-rs-sys"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[build-dependencies]
anyhow = "1.0.79"
mkl-rs-build = { version = "0.3.0", workspace = true }

[dev-dependencies]
rand = "0.9.0-alpha.0"

[features]
dynamic-ilp64-gomp = []
dynamic-ilp64-iomp = []
dynamic-ilp64-seq = []
dynamic-lp64-gomp = []
dynamic-lp64-iomp = []
dynamic-lp64-seq = []
static-ilp64-gomp = []
static-ilp64-iomp = []
static-ilp64-seq = []
static-lp64-gomp = []
static-lp64-iomp = []
static-lp64-seq = []
sdl = []
default = ["sdl"]
no-link = []
